fix alignment for elements on right section

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ main{
     flex-direction: row;
     height: 100vh;
     height: 100svh;
+    flex-wrap: wrap;
 }
 
 #left{
@@ -26,7 +27,6 @@ main{
 
 #left>img{
     width: 100%;
-    height: 100%;
     object-fit: cover;
 }
 
@@ -58,21 +58,19 @@ main{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding-left: 3rem;
+    padding-left: 5rem;
 }
 
 #signup{
-    padding-left: 3rem;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding: 1rem 5rem;
 }
 
 #sign-grid{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
     gap: 1rem 3rem;
-    max-width: 80%;
-    margin: 1rem auto;
+    width: clamp(320px, 80%, 1080px);
+    margin: 1rem 0;
 }
 
 #signup>h2{
@@ -147,6 +145,11 @@ input:not(:focus):not(:placeholder-shown):valid{
     }
     #right{
         width: 100%;
+    }
+
+    #left>#cred{
+        position: relative;
+        bottom: 2px;
     }
 
 }
